--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@nuxt/fonts": "^0.12.1",
     "@nuxt/hints": "^1.0.0-alpha.5",
     "@nuxt/image": "^2.0.0",
+    "@pinia/nuxt": "^0.11.3",
     "@vite-pwa/nuxt": "^1.1.0",
     "@vueuse/core": "^14.1.0",
     "eslint": "^9.39.2",
     "nuxt": "^4.2.2",
+    "pinia": "^3.0.4",
     "sass": "^1.97.1",
     "vue": "^3.5.26",
     "vue-router": "^4.6.4",
