--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxt/hints": "^1.0.0-alpha.5",
     "@nuxt/image": "^2.0.0",
     "@pinia/nuxt": "^0.11.3",
+    "@supabase/supabase-js": "^2.95.3",
     "@vite-pwa/nuxt": "^1.1.0",
     "@vueuse/core": "^14.1.0",
     "eslint": "^9.39.2",
